# ecryptfs-utils

./: AUTHORS  CONTRIBUTING  ChangeLog  INSTALL  Makefile.am  NEWS  README  THANKS  autogen.sh  bootstrap.sh  config.h.in  configure.ac  release.sh
debian/: changelog  control  copyright  ecryptfs-utils.dirs  ecryptfs-utils.ecryptfs-utils-restore.upstart  ecryptfs-utils.ecryptfs-utils-save.upstart  ecryptfs-utils.install  ecryptfs-utils.links  ecryptfs-utils.lintian-overides  ecryptfs-utils.lintian-overrides  ecryptfs-utils.pam-auth-update  ecryptfs-utils.postinst  ecryptfs-utils.prerm  ecryptfs-utils.upstart  (+4 more)
doc/: Makefile.am  ecryptfs-faq.html  ecryptfs-mount-private.txt  ecryptfs-pam-doc.txt  ecryptfs-pkcs11-helper-doc.txt
doc/beginners_guide/: Makefile.am  Makefile.am.rej  ecryptfs_beginners_guide.tex
doc/call_graph/: pageuptodate.dot
doc/design_doc/: Makefile.am  ecryptfs_design_doc.tex  ecryptfs_design_doc_v0_1.tex  ecryptfs_design_doc_v0_2.dvi  ecryptfs_design_doc_v0_2.tex  ecryptfs_design_doc_v0_2.toc  file_format.dia  file_format.eps  hmac_tree.dia  hmac_tree.eps  hmac_tree_update.dia  hmac_tree_update.eps  upper_lower_file.dia
doc/manpage/: Makefile.am  ecryptfs-add-passphrase.1  ecryptfs-escrow-private.1  ecryptfs-find.1  ecryptfs-generate-tpm-key.1  ecryptfs-insert-wrapped-passphrase-into-keyring.1  ecryptfs-manager.8  ecryptfs-migrate-home.8  ecryptfs-mount-private.1  ecryptfs-record-passphrase.1  ecryptfs-recover-private.1  ecryptfs-recover-private.8  ecryptfs-remove-private.1  ecryptfs-rewrap-passphrase.1  ecryptfs-rewrite-file.1  ecryptfs-setup-private.1  ecryptfs-setup-swap.1  ecryptfs-stat.1  ecryptfs-umount-private.1  ecryptfs-unwrap-passphrase.1  ecryptfs-verify.1  ecryptfs-wrap-passphrase.1  ecryptfs-zombie-kill.1  ecryptfs-zombie-list.1  ecryptfs.7  ecryptfs.pod  ecryptfsd.8  mount.ecryptfs.8  mount.ecryptfs_private.1  pam_ecryptfs.8  umount.ecryptfs.8  umount.ecryptfs_private.1
doc/manpage/fr/: ecryptfs-add-passphrase.1  ecryptfs-generate-tpm-key.1  ecryptfs-insert-wrapped-passphrase-into-keyring.1  ecryptfs-mount-private.1  ecryptfs-rewrap-passphrase.1  ecryptfs-setup-private.1  ecryptfs-umount-private.1  ecryptfs-unwrap-passphrase.1  ecryptfs-wrap-passphrase.1  ecryptfs-zombie-kill.1  ecryptfs-zombie-list.1
doc/sourceforge_webpage/: README  ecryptfs-faq.html  ecryptfs-pam-doc.txt  index.html
src/: Makefile.am
src/daemon/: Makefile.am  main.c
src/desktop/: Makefile.am  ecryptfs-find  ecryptfs-mount-private.desktop  ecryptfs-record-passphrase  ecryptfs-remind-passphrase  ecryptfs-setup-private.desktop
src/escrow/: escrow-passphrase.py  key-escrow-server  retrieve-passphrase.py
src/include/: Makefile.am  decision_graph.h  ecryptfs.h
src/jprobes/: Makefile  capture_lower_ops.c  ecryptfs_kernel.h  jprobe-create.c  jprobe-mount.c  jprobe-release.c  test-jprobe.c
src/key_mod/: Makefile.am  ecryptfs_key_mod_gpg.c  ecryptfs_key_mod_openssl.c  ecryptfs_key_mod_passphrase.c  ecryptfs_key_mod_pkcs11_helper.c  ecryptfs_key_mod_tspi.c
src/libecryptfs/: Makefile.am  cipher_list.c  cmd_ln_parser.c  decision_graph.c  ecryptfs-stat.c  key_management.c  key_mod.c  libecryptfs.pc.in  main.c  messaging.c  miscdev.c  module_mgr.c  netlink.c  netlink_packets.c  packets.c  proc.c  sysfs.c
src/libecryptfs-swig/: Makefile.am  libecryptfs.i  libecryptfs.py  libecryptfs_wrap.c
src/pam_ecryptfs/: Makefile.am  pam_ecryptfs.c
src/python/: ecryptapi.py  ecryptfsapi.py
src/python/nautilus/: __init__.py  dummy_nautilus.py  nautilus_api.py  storage.py
src/testcases/: README  directio.c  ecryptfs-noninteractive-tests.sh  filename-encryption.c  llseek.c  mkdir_rmdir.c  multi-key-tests.py  noninteractive.sh  open_close.c  runtests.wrk  stat_symlink.c  test-ecryptfs.py  test-procfs.c  tests.init  truncate.c  truncate_no_open.c  wrap_unwrap.c  write-read.sh  zombie.c
src/utils/: Makefile.am  dump_auth_tok.c  dump_auth_tok_key.c  ecryptfs-dot-private  ecryptfs-escrow-private  ecryptfs-migrate-home  ecryptfs-mount-confidential  ecryptfs-mount-private  ecryptfs-record-passphrase  ecryptfs-recover-private  ecryptfs-remove-private  ecryptfs-rewrite-file  ecryptfs-rewrite-private  ecryptfs-setup-confidential  ecryptfs-setup-pam-wrapped.sh  ecryptfs-setup-pam.sh  ecryptfs-setup-private  ecryptfs-setup-swap  ecryptfs-stat.c  ecryptfs-umount-confidential  ecryptfs-umount-private  ecryptfs-undo-pam.sh  ecryptfs-verify  ecryptfs_add_key.c  ecryptfs_add_passphrase.c  ecryptfs_generate_tpm_key.c  ecryptfs_insert_wrapped_passphrase_into_keyring.c  ecryptfs_rewrap_passphrase.c  ecryptfs_unwrap_passphrase.c  ecryptfs_wrap_passphrase.c  ecryptfs_zombie_kill.c  ecryptfs_zombie_list.c  ecryptfsrc  gen_key.c  io.c  io.h  manager.c  mount.ecryptfs.c  mount.ecryptfs_private.c  plaintext_decision_graph.c  (+2 more)
tests/kernel/: Makefile.am  directory-concurrent.sh  enospc.sh  extend-file-random.sh  file-concurrent.sh  inode-race-stat.sh  inotify.sh  link.sh  llseek.sh  lp-1009207.sh  lp-469664.sh  lp-509180.sh  lp-524919.sh  lp-561129.sh  lp-613873.sh  lp-745836.sh  lp-870326.sh  lp-872905.sh  lp-885744.sh  lp-911507.sh  lp-926292.sh  lp-994247.sh  miscdev-bad-count.sh  mknod.sh  mmap-bmap.sh  mmap-close.sh  mmap-dir.sh  read-dir.sh  setattr-flush-dirty.sh  tests.rc  trunc-file.sh  xattr.sh
tests/kernel/directory-concurrent/: test.c
tests/kernel/enospc/: test.c
tests/kernel/extend-file-random/: test.c
tests/kernel/file-concurrent/: test.c
tests/kernel/inode-race-stat/: test.c
tests/kernel/inotify/: test.c
tests/kernel/llseek/: test.c
tests/kernel/lp-509180/: test.c
tests/kernel/lp-524919/: test.c
tests/kernel/lp-870326/: test.c
tests/kernel/lp-994247/: test.c
tests/kernel/miscdev-bad-count/: test.c
tests/kernel/mmap-bmap/: test.c
tests/kernel/mmap-close/: test.c
tests/kernel/mmap-dir/: test.c
tests/kernel/read-dir/: test.c
tests/kernel/trunc-file/: test.c
tests/kernel/xattr/: test.c
tests/userspace/: Makefile.am  tests.rc  verify-passphrase-sig.sh  wrap-unwrap.sh
tests/userspace/verify-passphrase-sig/: test.c
tests/userspace/wrap-unwrap/: test.c
(+32 files in other folders)
