# Copyright (C) 2006 Trevor Highland <trevor.highland@gmail.com>
#
# This file is free software; as a special exception the author gives
# unlimited permission to copy and/or distribute it, with or without
# modifications, as long as this notice is preserved.
#
# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
# implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

MAINTAINERCLEANFILES = $(srcdir)/Makefile.in

dist_man_MANS = \
	ecryptfs.7 \
	ecryptfs-add-passphrase.1 \
	ecryptfsd.8 \
	ecryptfs-find.1 \
	ecryptfs-generate-tpm-key.1 \
	ecryptfs-insert-wrapped-passphrase-into-keyring.1 \
	ecryptfs-manager.8 \
	ecryptfs-migrate-home.8 \
	ecryptfs-mount-private.1 \
	ecryptfs-recover-private.1 \
	ecryptfs-rewrap-passphrase.1 \
	ecryptfs-rewrite-file.1 \
	ecryptfs-setup-private.1 \
	ecryptfs-setup-swap.1 \
	ecryptfs-stat.1 \
	ecryptfs-umount-private.1 \
	ecryptfs-unwrap-passphrase.1 \
	ecryptfs-verify.1 \
	ecryptfs-wrap-passphrase.1 \
	mount.ecryptfs.8 \
	umount.ecryptfs.8 \
	mount.ecryptfs_private.1 \
	pam_ecryptfs.8 \
	umount.ecryptfs_private.1
